more changes on rating

--- a/src/components/shared/why-project-ratings.json
+++ b/src/components/shared/why-project-ratings.json
@@ -15,7 +15,7 @@
       "type": "text"
     },
     "caption1": {
-      "type": "string"
+      "type": "text"
     },
     "image": {
       "type": "media",
